fix text align style issue
text-align: justify will casue ugly space between chinese and english character

--- a/themes/hexo-theme-iOS7/source/css/_partial/article.styl
+++ b/themes/hexo-theme-iOS7/source/css/_partial/article.styl
@@ -88,9 +88,9 @@ article
         display none
       &:before
         position absolute
-        font 32px font-icon    
+        font 32px font-icon
         top 0
-        left 0 
+        left 0
         width 32px
         text-align center
 
@@ -110,7 +110,7 @@ article
           color color-font
 
   .entry
-    text-align justify
+    // text-align justify
     line-height 1.6
     p, blockquote, ul, ol, dl, table, iframe, h3, h4, h5, h6, .video-container
       margin-top 15px
@@ -140,7 +140,7 @@ article
       font-family font-mono
 
     code
-      background color-background 
+      background color-background
       color color-meta
       padding 0 5px
       margin 0 2px
@@ -155,7 +155,7 @@ article
       word-wrap: break-word;
 
     pre
-      background color-background 
+      background color-background
       border 1px solid color-border
       color color-font
       font-size 12px
